SigmaCodebackup3rdSep/objects/BP_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Brewery_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brewery Producer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BP_Payments</relationshipLabel>
        <relationshipName>BP_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <formula>Brewery_Producer__r.Commision_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Interval__c</fullName>
        <formula>Brewery_Producer__r.Payment_interval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Interval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>BP_Payment</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BP_Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>